--- a/.env
+++ b/.env
@@ -27,3 +27,8 @@ APP_SECRET=2301dcf4b03c1896749ba913b48b770d
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:@127.0.0.1:3306/factura_facil?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+###> knplabs/knp-snappy-bundle ###
+WKHTMLTOPDF_PATH=/usr/local/bin/wkhtmltopdf
+WKHTMLTOIMAGE_PATH=/usr/local/bin/wkhtmltoimage
+###< knplabs/knp-snappy-bundle ###
