--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,11 @@
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "core23/dompdf-bundle": "^2.6",
+        "dompdf/dompdf": "^0.8.5",
         "easycorp/easyadmin-bundle": "^2.3",
+        "knplabs/knp-snappy": "^1.2",
+        "knplabs/knp-snappy-bundle": "^1.7",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
@@ -60,7 +64,7 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "5.0.*"
         }
     }
