--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=2301dcf4b03c1896749ba913b48b770d
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@127.0.0.1:3306/factura_facil?serverVersion=5.7
+DATABASE_URL=mysql://root:@127.0.0.1:3306/factura_facil_ampliacion?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
 
 ###> knplabs/knp-snappy-bundle ###
