--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "easycorp/easyadmin-bundle": "^2.3",
         "knplabs/knp-snappy": "^1.2",
         "knplabs/knp-snappy-bundle": "^1.7",
+        "sensio/framework-extra-bundle": "^5.5",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
